[package]
name = "rtmfp"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie-factory = "0.3.1"
nom = "5"
enumset = "1.0.1"

block-modes = "0.6.1"
aes = "0.5.0"
