[package]
name = "rtmfp-client"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtmfp = { path = "../rtmfp"}
nom = "5"
enumset = "1.0.1"
rand = "0.8.5"
hmac-sha256 = "1.1.4"
sussy_hellman = { path = "../sussy_hellman" }
openssl = { version = "0.10.41"}
num-bigint = "0.4.3"
num-traits = "0.2.15"
