[package]
name = "rtmfp"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cookie-factory = "0.3.1"
nom = "5"
enumset = "1.0.1"

block-modes = "0.6.1"
aes = "0.5.0"

rand = "0.8.5"

hmac-sha256 = "1.1.4"

derive-try-from-primitive = "1.0.0"
