[package]
name = "rtmfp"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "=7.1.3"
enumset = "=1.0.10"

cbc = { version = "=0.1.2", features = ["block-padding"] }
aes = "=0.8.4"

derive-try-from-primitive = "=1.0.0"
tracing = "=0.1.44"

parse = { git = "https://github.com/CUB3D/parse-rs", rev = "4e3e8bad444eeb24795cf6e880e3485f622136e5", features = ["alloc"] }